--- a/conics.html
+++ b/conics.html
@@ -7,10 +7,8 @@
 
 <body onload= "javascript:onLoad()">
 <h1>&nbsp;Conic Calculator<br>
-<font size="1">Written by Christopher Puglia based on <a href="CONICS.TXT">
-<span style="text-decoration: none"><font color="#000000">code from Joe Perry</font></span></a><br>
-<font face="Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-©</font>2015 Space Optics Research Labs<br>
+<font size="1">Written by Christopher Puglia </font><br>
+
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="conics.html" download>Download for Offline Use</a></font></h1>
