--- a/index.htm
+++ b/index.htm
@@ -2,14 +2,14 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>New Page 1</title>
+<title>Optics Calcualtor</title>
 </head>
 
 <body>
 
 <p align="center">
 
-<img src = "logo.png" width="300" height="112" align="middle"></p>
+</p>
 <h2 align="center">Optics Calculators</h2>
 <div align="center">
 	<table border="1" width="407" style="border-collapse: collapse">
@@ -35,9 +35,7 @@
 		</tr>
 	</table>
 </div>
-<p align="center"><font size="1">Created by Christopher Puglia based on code 
-written by Joe Perry<br>
-<font face="Times New Roman">©2015 SORL</font></font></p>
+<p align="center"><font size="1">Created by Christopher Puglia<br></font></p>
 
 </body>
 
