--- a/oapval.html
+++ b/oapval.html
@@ -7,12 +7,8 @@
 
 <body onload= "javascript:onLoad()">
 <h1>OAPVAL Calculator<br>
-<font size="1">Written by Christopher Puglia based on 
-<span style="text-decoration: none"><a href="OAPVAL.TXT"><font color="#000000">code from Joe Perry</font></a></span><br>
-<font face="Times New Roman">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-©</font>2015 Space Optics Research Labs<br>
+<font size="1">Written by Christopher Puglia</font><br>
 <br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="oapval.html" download>Download for Offline Use</a></font></h1>
 <font color="#ff0000"><p id ="loctype"></p></font>
 
