--- a/conics.html
+++ b/conics.html
@@ -7,7 +7,7 @@
 
 <body onload= "javascript:onLoad()">
 <h1>&nbsp;Conic Calculator<br>
-<font size="1">Written by Christopher Puglia </font><br>
+<font size="1">Written by Christopher Puglia <br>
 
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
