--- a/oapval.html
+++ b/oapval.html
@@ -7,7 +7,7 @@
 
 <body onload= "javascript:onLoad()">
 <h1>OAPVAL Calculator<br>
-<font size="1">Written by Christopher Puglia</font><br>
+<font size="1">Written by Christopher Puglia<br>
 <br>
 <a href="oapval.html" download>Download for Offline Use</a></font></h1>
 <font color="#ff0000"><p id ="loctype"></p></font>
